js/js.translator/testData/incremental/invalidation/exceptionsFromInlineFunctionWithCrossModuleInliner/lib1/l1.6.kt
inline fun foo() = 6
